assets/sass/components/_header-search.scss
.header-search {
	grid-area: search;
    display: inline-flex;
    height: 36px;
	width: 100%;
    align-self: center;
    align-items: center;
    justify-self: end;
    z-index: 10;

	&__form {
		width: 100%;
	    transition: width 300ms ease-out;
	}

	&__input {
		justify-self: end;
	    width: 0px;
	    height: 36px;
	    border: 0;
	    border-radius: 0;
	    padding: 0;
	    border-bottom: solid 1px $hbc-highlight;
	    background-color: transparent;

	    &:focus {
			outline: none;
	    }
	}

    &__svg {
    	height: 28px;
	    width: 23px;
    	overflow: visible !important;
		position: absolute;
	    right: 60px;
	    z-index: 151;

    	.path {
    		stroke: white;
    		fill: none;
			stroke-width: 2px;
			stroke-linecap: round;
			stroke-linejoin: round;
			transition: stroke 250ms ease-out;
    	}
    }


	&__results {
		display: none;
	    position: absolute;
	    right: 0;
	    left: 0;
	    top: 50px;
	    padding-top: 40px;

	    .snippet {
    		border-bottom: solid 1px $hbc-border;
		    padding: 20px 20px;
		    top: 0;
		    max-width: $content-width;
		    margin: auto;
		    background-color: white;

		    &:last-child {
		    	border: 0;
		    }

		    &__meta {
		    	height: 28px;
		    }

		    &__title {
				margin: 0 0 5px 0;
				@include render-type-style(subhead-1, $type-styles);
		    }

		    &__excerpt {
		    	display: none;
		    	margin: 0;
		    }

		    .meta__category-link {
		    	font-size: 15px;
		    }

		    .meta__date {
		    	color: $hbc-gray;
			    @include render-type-style(slug-2, $type-styles);
		    }
	    }

	    // async results
	    &--active {
		    background-color: white;
		    height: 100vh;
		    width: 100vw;
		    transform: translateX(-50%);
		    left: 50%;	    	
	    }
	}

	// UI: form, input, icon
    &--active {
		background-color: rgba(255,255,255,1);

		.header-search__svg {
			right: 0;

		    .path {
	    		stroke: $hbc-gray;
	    	}
		}

		.header-search__results {
			display: block;
		}

		.header-search__form {
			display: grid;

			.header-search__input {
				width: calc(100% - 10px);
			    margin-right: 0px;
			    color: $hbc-black;
			}

			.search-ui-fix {
				z-index: 150;
				width: calc(100% - 10px);
				
				@include media('>=medium') {
					width: calc(100% - 30px);
				}
			}
		}
    }



	// hide search icon when nav is open
    @include media('<=medium') {

		&--active {

			.site-header__inner {
				grid-template-columns: 75px 1fr 0px;
			}

			.navigation__menu-icon {
		 		opacity: 0;
		 		pointer-events: none;
			}
		}
	}

	@include media('<=medium') {

		&--active {

			// change color of menu icon when search is open
			.navigation__menu-icon {

		 		.bar {
					stroke: $hbc-black;
				}
			}
		}
	}
	
	@include media('>=medium') {
		
		&__form {
			width: 0%;
		}

		&__svg {
	    	height: 26px;
		    width: 28px;
	    	right: 0;

	    	&:hover {
	    		cursor: pointer;

			    .path {
		    		stroke: $hbc-highlight;
		    	}
	    	}
	    }

	    &--active {
		    z-index: 1;

			.header-search__form {
				position: absolute;
		        right: 5px;
			    width: calc(100% - 100px);
	    
				.header-search__input {
				    width: calc(100% - 30px);
				}
			}

			//hide menu items when search opens
			.link-list__link-item {
			    transform: scale(0) !important;
			}
	    }
    }
}

